# minecraft

./: Cargo.toml  README.md  shaders.sh
src/: app.rs  gfx.rs  main.rs
src/game/: input.rs  mod.rs
src/gfx/: events.rs  mod.rs  vulkan.rs  window.rs
src/gfx/renderers/: block.rs  mod.rs  solid.rs
src/gfx/vulkan/: debug.rs  device.rs  instance.rs  mod.rs  render_pass.rs  state.rs  surface.rs  swapchain.rs  vulkan.rs
src/shaders/: block.rs
src/world/: block.rs
