[package]
name = "minecraft"
version = "0.1.0"
authors = ["oreqizer <oreqizer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = "0.32.1"
ash-window = "0.6.0"
cgmath = { version = "0.18.0", features = ["swizzle"] }
winit = "0.24.0"
